[package]
name = "rankit"
version = "0.1.0"
edition = "2021"
default-run = "rankit"

[dependencies]
anyhow = "1.0"
async-fs = "2.1.0"
axum = { version = "0.6", features = ["multipart", "macros"] }
axum-test-helper = "0.3.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
dotenvy = "0.15"
env_logger = "0.10"
hmac = "0.12"
image = "0.24"
jsonwebtoken = "9.1"
log = "0.4"
rand = "0.8.5"
random = "0.14.0"
refinery = { version = "0.8", features = ["tokio-postgres", "default"] }
regex = "1.10"
reqwest = "0.11.22"
scrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.33", features = ["full"] }
tokio-postgres = "0.7"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }

[profile.dev.package."*"]
opt-level = 3
